--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru-Ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,8 +9,81 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    
+    <section class="promo">
+        <div class="container">
+            <header class="header" id="header">
+                <div class="header__inner">
+                    <a href="#" class="header__logo">
+                        <img src="icons/logo.png" alt="logo">
+                    </a>
+                    
+                    <nav class="header__nav" id="nav">
+                        <a class="header__link" href="#" data-scroll="#advantages">Приемущества</a>
+                        <a class="header__link" href="#" data-scroll="#work">Наша работа</a>
+                        <a class="header__link" href="#" data-scroll="#price">Цены</a>
+                        <a class="header__link" href="#" data-scroll="#sheme">Схема работы</a>
+                        <a class="header__link" href="#" data-scroll="#review">Отзывы</a>
+                        <a class="header__link" href="#" data-scroll="#contact">Контанкты</a>
+                    </nav>
 
+                    <div class="header__contacts">
+                        <div class="header__quest">Есть вопросы?</div>
+                        <a href="tel:+74999228974" class="header__phone">+7 (926) 423 01 00</a>
+                    </div>
+                    <button data-modal="consultation" class="button button_main">перезвоните мне</button>
+                </div>
+        </header>
+
+        <div class="promo__wrapper">
+            <h3 class="promo__intro">Global Opt - логистика полного цикла из Китая в Россию</h3>
+            <h1 class="promo__header">Доставака грузов из Китая</h1>
+            <h2 class="promo__subheader">В россию и СНГ всеми видами транспорта</h2>
+
+            <div class="divider">
+                <div class="divider__line_1"></div>
+                <div class="divider__dott"></div>
+                <div class="divider__line_2"></div>
+            </div>
+
+            <div class="promo__items">
+                <div class="promo__item">
+                    <div class="promo__icon">
+                        <img src="icons/cargo.png" alt="timer">
+                    </div>
+                    <div class="promo__text">
+                        Перевозка негабаритных и крупнотоннажных грузов
+                    </div>
+                </div>
+                <div class="promo__item">
+                    <div class="promo__icon">
+                        <img src="icons/check.png" alt="timer">
+                    </div>
+                    <div class="promo__text">
+                        Самостоятельно декларируем и проводим таможенную очистку с оптимизацией кодов и ставок
+                    </div>
+                </div>
+                <div class="promo__item">
+                    <div class="promo__icon">
+                        <img src="icons/home_delivery.png" alt="cart">
+                    </div>
+                    <div class="promo__text">
+                        Осуществляем прямые поставки с заводов от двери до двери
+                    </div>
+                </div>
+                <div class="promo__item">
+                    <div class="promo__icon">
+                        <img src="icons/fast_delivery.png" alt="massage">
+                    </div>
+                    <div class="promo__text">
+                        Экспресс доставка 1-2 дня из Гуанчжоу в Москву от 25$/кг
+                    </div>
+                </div>
+            </div>
+
+            <button data-modal="consultation" class="button button_promo">Получить расчет</button>
+        </div>
+    </div>
+    </section>
 
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
